--- a/elm.cabal
+++ b/elm.cabal
@@ -34,7 +34,10 @@ Flag dev {
 }
 
 
-Executable elm
+-- Executable elm
+--     Main-Is:
+--         Main.hs
+library        
     if flag(dev)
         ghc-options: -O0 -Wall -Werror
     else
@@ -51,10 +54,9 @@ Executable elm
     other-extensions:
         TemplateHaskell
 
-    Main-Is:
-        Main.hs
 
-    other-modules:
+
+    exposed-modules:
         Bump
         Develop
         Diff
@@ -203,12 +205,14 @@ Executable elm
         Paths_elm
 
     Build-depends:
-        ansi-terminal >= 0.8 && < 0.9,
+        -- ansi-terminal >= 0.8 && < 0.9,
+        ansi-terminal,
         ansi-wl-pprint >= 0.6.8 && < 0.7,
         base >=4.11 && <5,
         binary >= 0.8 && < 0.9,
         bytestring >= 0.9 && < 0.11,
-        containers >= 0.5.8.2 && < 0.6,
+        -- containers >= 0.5.8.2 && < 0.6,
+        containers,
         directory >= 1.2.3.0 && < 2.0,
         edit-distance >= 0.2 && < 0.3,
         file-embed,
@@ -220,9 +224,11 @@ Executable elm
         http-client >= 0.6 && < 0.7,
         http-client-tls >= 0.3 && < 0.4,
         http-types >= 0.12 && < 1.0,
-        language-glsl >= 0.3,
+        -- language-glsl >= 0.3,
+        language-glsl,
         mtl >= 2.2.1 && < 3,
-        network >= 2.4 && < 2.7,
+        -- network >= 2.4 && < 2.7,
+        network,
         parsec,
         process,
         raw-strings-qq,
@@ -232,6 +238,7 @@ Executable elm
         snap-server,
         template-haskell,
         time >= 1.9.1,
+        -- time,
         unordered-containers,
         utf8-string,
         vector,
